carina-cli/tests/fixtures/negative/invalid_cidr.crn
# Negative test: invalid CIDR format
# Expected: validation error for cidr_block

provider awscc {
  region = awscc.Region.ap_northeast_1
}

awscc.ec2.Vpc {
  cidr_block = 'not-a-cidr'
}
